# dev-env-bootstrap

./: .gitattributes  .gitignore  Makefile  README.md  bootstrap.ps1  dev.config
docs/: AI-WORKFLOW.md  USAGE.html
scripts/: extensions.txt  install_global.sh  run_analysis.sh  run_graders.sh  run_report.sh  run_tests.sh  scaffold_project.sh
templates/python/: .pre-commit-config.yaml  perf.py  pyproject.toml  smoke_test.py
templates/python/tests/: test_from_testcases.py
templates/vscode/: extensions.json  settings.json
templates/web/: index.html  package.json
