# ============================================================
# 참고용 pyproject.toml 템플릿
#
# 스캐폴딩 스크립트는 `uv init` 으로 pyproject.toml 을 자동 생성하므로,
# 이 파일은 그 위에 병합해서 쓸 Ruff / pytest 권장 설정 모음이다.
# 생성된 프로젝트의 pyproject.toml 아래쪽에 [tool.ruff] 이하 섹션을
# 복사해 넣으면 된다.
# ============================================================

[project]
name = "my-project"
version = "0.1.0"
description = "uv + Ruff + pytest 기반 파이썬 프로젝트"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

# ---------- Ruff (린터 + 포매터) ----------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
