# ============================================================
# 참고용 pyproject.toml 템플릿
#
# 스캐폴딩 스크립트는 `uv init` 으로 pyproject.toml 을 자동 생성하므로,
# 이 파일은 그 위에 병합해서 쓸 Ruff / pytest 권장 설정 모음이다.
# 생성된 프로젝트의 pyproject.toml 아래쪽에 [tool.ruff] 이하 섹션을
# 복사해 넣으면 된다.
# ============================================================

[project]
name = "my-project"
version = "0.1.0"
description = "uv + Ruff + pytest 기반 파이썬 프로젝트"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "psutil>=5"]   # psutil: perf.py 메모리/CPU 계측에 필요

# ---------- Ruff (린터 + 포매터) ----------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
# C901: 순환 복잡도(mccabe) — complexipy의 인지 복잡도와 상호보완(다른 지표다)
# PLR09xx: OOP 설계 냄새 — too-many-arguments/branches/returns/statements
#   (전체 PLR 대신 설계 규칙만 선택: PLR2004 매직넘버 같은 소음성 규칙 제외)
select = ["E", "F", "I", "UP", "B", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
